--- a/pages/Snacks.html
+++ b/pages/Snacks.html
@@ -13,18 +13,18 @@
 
 <body>
     <div class="header">
-        <a class="logo-wrapper" href="../index.html"><img class="logo-img"/></a>
+        <a class="logo-wrapper" href="../index.html"><img class="logo-img" /></a>
         <h1>GreenMart</h1>
         <div class="time-container">
             <h1 id="date"></h1>
             <h1 id="time"></h1>
         </div>
         <script src="../js/timer.js"></script>
-        <a class="user-wrapper" href="./Account.html"><img class="user-img"/></a> 
+        <a class="user-wrapper" href="./Account.html"><img class="user-img" /></a>
     </div>
 
     <div class="topnav" id="myTopnav">
-        <a href="../index.html">Home</a> 
+        <a href="../index.html">Home</a>
         <a href="FreshProduce.html">Fresh Produce</a>
         <a href="Frozen.html">Frozen</a>
         <a href="Pantry.html">Pantry</a>
@@ -32,7 +32,7 @@
         <a href="Baking.html">Baking</a>
         <a href="Snacks.html" class="active">Snacks</a>
         <a href="Candy.html">Candy</a>
-        <a href="Specialty.html" >Specialty Shops</a>
+        <a href="Specialty.html">Specialty Shops</a>
         <a href="Deals.html">Deals</a>
         <a href="Account.html">My Account</a>
         <a href="About.html">About Us</a>
@@ -47,6 +47,7 @@
                 <input type="text" class="search-input" id="search" placeholder="Search..." onkeyup="searchInput()">
                 <button class="search-button">Search</button>
             </div>
+            <div id="message"></div>
 
             <div class="item-wrapper">
                 <div class="item-card" id="snack1">
@@ -59,7 +60,8 @@
                         <input type="text" value="1" class="item-count">
                         <span class="up" onClick='increaseCount(event, this)'>+</span>
                     </div>
-                    <button class="add-to-cart" onclick="addToCart('Snack Pack Chocolate Pudding', 1.27, 'snack1')">Add to Cart</button>
+                    <button class="add-to-cart" onclick="addToCart('Snack Pack Chocolate Pudding', 1.27, 'snack1')">Add
+                        to Cart</button>
                 </div>
                 <div class="item-card" id="snack2">
                     <img src="../img/products/chips.jpeg" alt="Chips">
@@ -71,7 +73,8 @@
                         <input type="text" value="1" class="item-count">
                         <span class="up" onClick='increaseCount(event, this)'>+</span>
                     </div>
-                    <button class="add-to-cart" onclick="addToCart('Miss Vickies Potato Chips', 5.63, 'snack2')">Add to Cart</button>
+                    <button class="add-to-cart" onclick="addToCart('Miss Vickies Potato Chips', 5.63, 'snack2')">Add to
+                        Cart</button>
                 </div>
                 <div class="item-card" id="snack3">
                     <img src="../img/products/oreo.webp" alt="Oreos">
@@ -83,8 +86,51 @@
                         <input type="text" value="1" class="item-count">
                         <span class="up" onClick='increaseCount(event, this)'>+</span>
                     </div>
-                    <button class="add-to-cart" onclick="addToCart('OREO Chocolate Cookies', 7.81, 'snack3')">Add to Cart</button>
+                    <button class="add-to-cart" onclick="addToCart('OREO Chocolate Cookies', 7.81, 'snack3')">Add to
+                        Cart</button>
                 </div>
+
+                <div class="item-card" id="snack4">
+                    <img src="../img/products/minipretzels.jpg" alt="Pretzels">
+                    <h4>Mini Pretzels</h4>
+                    <p>Snack Size, 16 oz Bag</p>
+                    <span class="price">$3.49</span>
+                    <div class="counter">
+                        <span class="down" onClick='decreaseCount(event, this)'>-</span>
+                        <input type="text" value="1" class="item-count">
+                        <span class="up" onClick='increaseCount(event, this)'>+</span>
+                    </div>
+                    <button class="add-to-cart" onclick="addToCart('Mini Pretzels', 3.49, 'snack4')">Add to
+                        Cart</button>
+                </div>
+
+                <div class="item-card" id="snack5">
+                    <img src="../img/products/mixednuts.avif" alt="Mixed Nuts">
+                    <h4>Mixed Nuts</h4>
+                    <p>Roasted, Salted, 12 oz Canister</p>
+                    <span class="price">$5.99</span>
+                    <div class="counter">
+                        <span class="down" onClick='decreaseCount(event, this)'>-</span>
+                        <input type="text" value="1" class="item-count">
+                        <span class="up" onClick='increaseCount(event, this)'>+</span>
+                    </div>
+                    <button class="add-to-cart" onclick="addToCart('Mixed Nuts', 5.99, 'snack5')">Add to Cart</button>
+                </div>
+ 
+                <div class="item-card" id="snack6">
+                    <img src="../img/products/potatochips.jpeg" alt="Potato Chips">
+                    <h4>Lay's Classic Potato Chips</h4>
+                    <p>Party Size, 16.5 oz Bag</p>
+                    <span class="price">$4.29</span>
+                    <div class="counter">
+                        <span class="down" onClick='decreaseCount(event, this)'>-</span>
+                        <input type="text" value="1" class="item-count">
+                        <span class="up" onClick='increaseCount(event, this)'>+</span>
+                    </div>
+                    <button class="add-to-cart" onclick="addToCart('Lays Classic Potato Chips', 4.29, 'snack6')">Add to
+                        Cart</button>
+                </div>
+
             </div>
         </div>
         <div class="side">
@@ -105,8 +151,8 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            
-                        </tr> 
+
+                        </tr>
                     </tbody>
                     <tfoot>
                         <tr>
@@ -119,7 +165,7 @@
             </div>
 
             <button class="cart-buy" onclick="window.location.href='Cart.html'">Begin Checkout</button>
-            <button class="cart-buy" onclick="emptyCart()">Empty Cart</button> 
+            <button class="cart-buy" onclick="emptyCart()">Empty Cart</button>
         </div>
     </div>
 
