--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                     <a href="./pages/FreshProduce.html"><button class="add-to-cart">Explore</button></a>
                 </div>
                 <div class="item-card">
-                    <img src="./img/products/bakery.jpeg" alt="Bakery">
+                    <img src="./img/products/bakingpies.jpeg" alt="Bakery">
                     <h4>Baking</h4>
-                    <p>Baked goods, cake mixes</p>
+                    <p>Bake a pie from scratch!</p>
                     <a href="./pages/Baking.html"><button class="add-to-cart">Explore</button></a>
                 </div>
                 <div class="item-card">
-                    <img src="./img/products/specialties.jpeg" alt="Specialties">
-                    <h4>Specialties</h4>
-                    <p> Assorted wines and cheeses</p>
-                    <a href="./pages/Specialty.html"><button class="add-to-cart">Explore</button></a>
+                    <img src="./img/products/breakfast_homepage.jpeg" alt="Specialties">
+                    <h4>Breakfast</h4>
+                    <p>Oats, Waffles, Cereal</p>
+                    <a href="./pages/Breakfast.html"><button class="add-to-cart">Explore</button></a>
                 </div>
             </div>
 
